add basic layout example, dependecies for it, enhance readme a little

--- a/app/develop.html
+++ b/app/develop.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <!-- top-level page block-->
-        <div id="pageMain"></div>
+        <div id="pageMain" class="component page themeAppBackground"></div>
     </body>
 </html>
